--- a/01extra_cpp/01extra_cpp.tex
+++ b/01extra_cpp/01extra_cpp.tex
@@ -9,13 +9,31 @@
 %\usepackage{marvosym}
 
 \usepackage{listings}
-\lstset{
-	language=C++, 
-	basicstyle=\ttfamily, 
-	keywordstyle=\color{blue}\ttfamily, 
-	stringstyle=\color{red}\ttfamily,
-	tabsize = 4
+\lstdefinestyle{customc}{
+	belowcaptionskip=1\baselineskip,
+	breaklines=true,
+	frame=L,
+	xleftmargin=\parindent,
+	language=C,
+	showstringspaces=false,
+	basicstyle=\footnotesize\ttfamily,
+	keywordstyle=\bfseries\color{green!40!black},
+	commentstyle=\itshape\color{purple!40!black},
+	identifierstyle=\color{blue},
+	stringstyle=\color{orange},
 }
+
+\lstdefinestyle{customasm}{
+	belowcaptionskip=1\baselineskip,
+	frame=L,
+	xleftmargin=\parindent,
+	language=[x86masm]Assembler,
+	basicstyle=\footnotesize\ttfamily,
+	commentstyle=\itshape\color{purple!40!black},
+}
+
+\lstset{escapechar=@,style=customc}
+
 
 \makeatletter
 \renewcommand*{\mathellipsis}{%
