--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -3,20 +3,38 @@
 \usepackage[normalem]{ulem}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{lipsum}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
 \usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float}
 \usetikzlibrary{arrows, positioning}
 
 \usepackage{listings}
-\lstset{
-	language=C++, 
-	basicstyle=\ttfamily, 
-	keywordstyle=\color{blue}\ttfamily, 
-	stringstyle=\color{red}\ttfamily,
-	tabsize = 4
+\lstdefinestyle{customc}{
+	belowcaptionskip=1\baselineskip,
+	breaklines=true,
+	frame=L,
+	xleftmargin=\parindent,
+	language=C,
+	showstringspaces=false,
+	basicstyle=\footnotesize\ttfamily,
+	keywordstyle=\bfseries\color{green!40!black},
+	commentstyle=\itshape\color{purple!40!black},
+	identifierstyle=\color{blue},
+	stringstyle=\color{orange},
 }
 
+\lstdefinestyle{customasm}{
+	belowcaptionskip=1\baselineskip,
+	frame=L,
+	xleftmargin=\parindent,
+	language=[x86masm]Assembler,
+	basicstyle=\footnotesize\ttfamily,
+	commentstyle=\itshape\color{purple!40!black},
+}
+
+\lstset{escapechar=@,style=customc}
 \usepackage{hyperref}
 
 \begin{document}
