--- a/03gy_cpp/03gy_cpp.tex
+++ b/03gy_cpp/03gy_cpp.tex
@@ -13,26 +13,34 @@
 	belowcaptionskip=1\baselineskip,
 	breaklines=true,
 	frame=L,
-	xleftmargin=\parindent,
-	language=C,
+	language=C++,
 	showstringspaces=false,
-	basicstyle=\footnotesize\ttfamily,
+	basicstyle=\ttfamily,
+	%identifierstyle=\color{blue},
 	keywordstyle=\bfseries\color{green!40!black},
-	commentstyle=\itshape\color{purple!40!black},
-	identifierstyle=\color{blue},
 	stringstyle=\color{orange},
+	emph=std,
+	emphstyle = \color{blue},
+	tabsize = 4
 }
 
 \lstdefinestyle{customasm}{
 	belowcaptionskip=1\baselineskip,
 	frame=L,
-	xleftmargin=\parindent,
 	language=[x86masm]Assembler,
-	basicstyle=\footnotesize\ttfamily,
+	basicstyle=\ttfamily,
 	commentstyle=\itshape\color{purple!40!black},
 }
 
-\lstset{escapechar=@,style=customc}
+\lstset{
+	escapechar=@,
+	style=customc,
+	literate =  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
+	{Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
+	{ö}{{\"o}}1 {ü}{{\"u}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
+	{ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
+	{€}{{\euro}}1 {£}{{\pounds}}1	
+}
 
 \usepackage{hyperref}
 
