--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -98,7 +98,7 @@ void f(int t[8])
 	\begin{lstlisting}
 #include <iostream>
 
-void f(int *t, int size) // uj parameter!
+void f(int *t, int size) // új paraméter!
 {
 	std::cout << sizeof(t) << std::endl;
 }
