--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -494,7 +494,7 @@ int main()
 struct List
 {
   // ...	
-	void add(int data) //eltunt egy parameter!
+	void add(int data) //eltűnt egy paraméter!
 	{
 		if (next == 0)
 		{
@@ -637,7 +637,7 @@ int main()
 List cHead = head; //copy ctor
 
 List cHead;
-cHead = head; //ertekadas
+cHead = head; //értekadás
 	\end{lstlisting}
 	
 \end{document}
