--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -544,7 +544,7 @@ public:
 	Más útja is létezik annak, hogy át lehessen konvertálni egy \texttt{Iterator} típusú objektumot \texttt{ConstIterator} típusúvá, ha létrehozunk egy un. \textbf{konverziós operátor}t (\textit{conversion operator} vagy \textit{user defined conversion}). 
 	\begin{lstlisting}
 // ...
-class ConstIterator; //forward deklaracio itt szukseges
+class ConstIterator; //forward deklaráció itt szükséges
 
 class Iterator
 {
