--- a/cpp_book/cpp_book.tex
+++ b/cpp_book/cpp_book.tex
@@ -21,7 +21,7 @@
 	basicstyle=\ttfamily,
 	%identifierstyle=\color{blue},
 	keywordstyle=\bfseries\color{green!40!black},
-	stringstyle=\color{orange},
+	stringstyle=\color{orange!70!black},
 	emph=std,
 	emphstyle = \color{blue},
 	tabsize = 4
