--- a/09gy_cpp/09gy_cpp.tex
+++ b/09gy_cpp/09gy_cpp.tex
@@ -255,7 +255,7 @@ int main()
 	for (int i = 0; i<1000; i++)
 		v.push_back(i);
 		
-	*it = 10; // nem definialt viselkedes
+	*it = 10; // nem definiált viselkedés
 }
 	\end{lstlisting}
 	Az invalidáció elkerülése végett számos tagfüggvény egy iterátorral tér vissza, erre lehet példa az \texttt{insert}, mely az új elemre, vagy az \texttt{erase}, mely az utolsó eltávolított elem rákövetkezőjére hivatkozik.
@@ -494,7 +494,7 @@ int main()
 	\begin{lstlisting}
 bool contains(const std::map<std::string, int> &m)
 {
-	//m["c++"]; forditasi hiba: [] operator nem konstans fuggveny.
+	//m["c++"]; fordítási hiba: [] operator nem konstans függvény.
 	return m.find("C++") != m.end();
 }
 	\end{lstlisting}
