--- a/11gy_cpp/11gy_cpp.tex
+++ b/11gy_cpp/11gy_cpp.tex
@@ -694,7 +694,7 @@ public:
 	\begin{lstlisting}
 class Base final
 {
-	public:
+public:
 	virtual void f();
 };
 
@@ -741,7 +741,7 @@ struct Base
 
 struct Derived : public Base
 {
-	void print() cosnt
+	void print() const
 	{
 		std::cout << "Derived!" << std::endl;
 	}	
