small preamble change

--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -21,7 +21,7 @@
 	%identifierstyle=\color{blue},
 	keywordstyle=\bfseries\color{green!40!black},
 	stringstyle=\color{orange},
-	emph=std,
+	emph = {std, A, B, Base, BaseOne, BaseTwo, C, CharT, Circle, ConstIterator, D, Deltoid, Derived, Derived2, DerivedLast, DerivedOne, DerivedTwo, Fact, Fiu, Foo, Greater, Hallgato, Iterator, Kor, Lany, Less, LessByX, LinAlgVector, List, Matrix, Negyszog, Negyzet, Rombusz, S, Sielo, Sikidom, StringLength, T2, Templ, U, Val, X, Y, Z, deque, iterator_category, line_editor, list, map, multimap, multiset, pair, set, string, strlen, strlenWrong, vector},
 	emphstyle = \color{blue},
 	tabsize = 4
 }
