--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -19,7 +19,7 @@
 	%identifierstyle=\color{blue},
 	keywordstyle=\bfseries\color{green!40!black},
 	stringstyle=\color{orange},
-	emph=std,
+	emph = {std, A, B, BDIT, Base, BaseOne, BaseTwo, C, CharT, Circle, Compr, ConstIterator, Cont, D, Deltoid, Derived, Derived2, DerivedLast, DerivedOne, DerivedTwo, Fact, Fiu, Foo, Greater, Hallgato, IT, InputIt, Iterator, Kor, Lany, Less, LessByX, LinAlgVector, List, Matrix, Negyszog, Negyzet, RAIT, Rombusz, S, Sielo, Sikidom, StringLength, T, T1, T2, Templ, U, Val, X, Y, Z, bad_cast, bidirectional_iterator_tag, const_iterator, deque, forward_iterator_tag, input_iterator_tag, iostream, istream, iterator, iterator_category, line_editor, list, map, multimap, multiset, ostream, pair, random_access_iterator_tag, set, string, strlen, strlenWrong, value_type, vector}, 
 	emphstyle = \color{blue},
 	tabsize = 4
 }
