Tiny formatting changes

--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -475,9 +475,9 @@ public:
 		return !(*this == other);
 	}
 	ConstIterator operator++();
-	int operator*() const; //nem referenciaval ter vissza!
+	int operator*() const; //nem referenciával tér vissza!
 private:
-	const List *p; //konstanra mutato pointer!
+	const List *p; //konstanra mutató pointer!
 };
 
 class List
